apps/colcare/api/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colcare-worker
  namespace: colcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colcare-worker
  template:
    metadata:
      labels:
        app: colcare-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/harris-consult/colcare-api:latest
          imagePullPolicy: Always
          command: ["node", "dist/jobs/worker.main.js"]
