apps/colcare/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colcare-api
  namespace: colcare
spec:
  selector:
    app: colcare-api
  ports:
    port: 80
    targetPort: 4000
